swagger, metadata, deploy to pages for discussion
