# apps/api/src/metadata.ts
@@ -1,0 +1,12 @@
+/* eslint-disable */
+export default async () => {
+    const t = {
+        ["../../../libs/common/src/dtos/key.type.dto"]: await import("../../../libs/common/src/dtos/key.type.dto"),
+        ["../../../libs/common/src/dtos/privacy.type.dto"]: await import("../../../libs/common/src/dtos/privacy.type.dto"),
+        ["../../../libs/common/src/dtos/direction.dto"]: await import("../../../libs/common/src/dtos/direction.dto"),
+        ["../../../libs/common/src/dtos/connection.type.dto"]: await import("../../../libs/common/src/dtos/connection.type.dto"),
+        ["../../../libs/common/src/dtos/connections.dto"]: await import("../../../libs/common/src/dtos/connections.dto"),
+        ["../../../libs/common/src/dtos/graph.key.pair.dto"]: await import("../../../libs/common/src/dtos/graph.key.pair.dto")
+    };
+    return { "@nestjs/swagger": { "models": [[import("../../../libs/common/src/dtos/graph.query.dto"), { "GraphsQueryParamsDto": { dsnpIds: { required: true, type: () => [String] }, blockNumber: { required: false, type: () => String } } }], [import("../../../libs/common/src/dtos/graph.key.pair.dto"), { "GraphKeyPairDto": { publicKey: { required: true, type: () => String }, privateKey: { required: true, type: () => String }, keyType: { required: true, type: () => String, enum: t["../../../libs/common/src/dtos/key.type.dto"].KeyType } } }], [import("../../../libs/common/src/dtos/connections.dto"), { "ConnectionDto": { dsnpId: { required: true, type: () => String }, privacyType: { required: true, enum: t["../../../libs/common/src/dtos/privacy.type.dto"].PrivacyType }, direction: { required: true, enum: t["../../../libs/common/src/dtos/direction.dto"].Direction }, connectionType: { required: true, enum: t["../../../libs/common/src/dtos/connection.type.dto"].ConnectionType } } }], [import("../../../libs/common/src/dtos/provider.graph.dto"), { "ProviderGraphDto": { dsnpId: { required: true, type: () => String }, privacyType: { required: true, enum: t["../../../libs/common/src/dtos/privacy.type.dto"].PrivacyType }, connections: { required: true, type: () => ({ data: { required: true, type: () => [t["../../../libs/common/src/dtos/connections.dto"].ConnectionDto] } }) }, graphKeyPairs: { required: true, type: () => [t["../../../libs/common/src/dtos/graph.key.pair.dto"].GraphKeyPairDto] } } }], [import("../../../libs/common/src/dtos/watch-graphs.dto"), { "WatchGraphsDto": { dsnpIds: { required: true, type: () => [String] }, webhookEndpoint: { required: true, type: () => String } } }]], "controllers": [[import("./api.controller"), { "ApiController": { "health": {}, "getGraphs": {}, "updateGraph": {}, "watchGraphs": {} } }]] } };
+};
